[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyzlc"
version = "1.0.2"
description="A cross-environment tool to publish objects from simulation for Augmented Reality and Human Robot Interaction."
dependencies = [
    "msgpack",
    "pyzmq",
    "colorama",
]
authors = [
  { name = "Xinkai Jiang", email = "jiangxinkai98@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
readme = "README.md"
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyzlc"]